yaml/inference.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-inference-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model-inference-service
  template:
    metadata:
      labels:
        app: model-inference-service
    spec:
      containers:
      - name: inference-container
        image: gcr.io/apmlic-hw2/model-inference-service:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: model-storage
          mountPath: /models
          readOnly: true
      volumes:
      - name: model-storage
        persistentVolumeClaim:
          claimName: model-storage-pvc
          
---
apiVersion: v1
kind: Service
metadata:
  name: model-inference-service
spec:
  selector:
    app: model-inference-service
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
